--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.html
@@ -40,26 +40,26 @@
             <div class="different">
                 <div class="title">{{title}} năm {{hrmReportService.nam}} và {{hrmReportService.nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
-                    <h3 class="triangle-up pt1" *ngIf="getsumwithcategoriesnow-getsumwithcategoriespast>0"></h3>
-                    <h3 class="triangle-down pt1" *ngIf="getsumwithcategoriespast-getsumwithcategoriesnow>0"></h3>
-                    <h3 class="pl2" *ngIf="(getsumwithcategoriesnow-getsumwithcategoriespast)>0" style="color: #06f812;">{{getsumwithcategoriesnow-getsumwithcategoriespast}}</h3>
-                    <h3 class="pl2" *ngIf="(getsumwithcategoriespast-getsumwithcategoriesnow)>0" style="color:#fa0303;">{{getsumwithcategoriespast-getsumwithcategoriesnow}}</h3>
+                    <h3 class="triangle-up pt1" *ngIf="hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast>0"></h3>
+                    <h3 class="triangle-down pt1" *ngIf="hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow>0"></h3>
+                    <h3 class="pl2" *ngIf="(hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast)>0" style="color: #06f812;">{{hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast | currency:'VND'}}</h3>
+                    <h3 class="pl2" *ngIf="(hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow)>0" style="color:#fa0303;">{{hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow | currency:'VND'}}</h3>
                 </div>
                 <div class="percent flex flex-wrap w-100 justify-center">
-                    <h4 class="triangle-up pt1" *ngIf="getsumwithcategoriesnow-getsumwithcategoriespast>0"></h4>
-                    <h4 class="triangle-down pt1" *ngIf="getsumwithcategoriespast-getsumwithcategoriesnow>0"></h4>
-                    <h4 class="pl2 " *ngIf="getsumwithcategoriespast!==0&&getsumwithcategoriesnow!==0&&getsumwithcategoriesnow>getsumwithcategoriespast" style="color: #06f812;">{{(getsumwithcategoriesnow-getsumwithcategoriespast)/(getsumwithcategoriespast)*100}}%</h4>
-                    <h4 class="pl2 " *ngIf="getsumwithcategoriespast!==0&&getsumwithcategoriesnow!==0&&getsumwithcategoriespast>getsumwithcategoriesnow" style="color: #fa0303;">{{(getsumwithcategoriespast-getsumwithcategoriesnow)/(getsumwithcategoriespast)*100}}%</h4>
-                    <h4 class="pl2" *ngIf="getsumwithcategoriespast==0&&getsumwithcategoriesnow!==0" style="color: #06f812;">100%</h4>
-                    <h4 class="pl2 yellow" *ngIf="getsumwithcategoriespast==getsumwithcategoriesnow">0%</h4>
+                    <h4 class="triangle-up pt1" *ngIf="hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast>0"></h4>
+                    <h4 class="triangle-down pt1" *ngIf="hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow>0"></h4>
+                    <h4 class="pl2 " *ngIf="hrmReportService.getsumwithcategoriespast!==0&&hrmReportService.getsumwithcategoriesnow!==0&&hrmReportService.getsumwithcategoriesnow>hrmReportService.getsumwithcategoriespast" style="color: #06f812;">{{(hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast)/(hrmReportService.getsumwithcategoriespast)*100 | number:'1.1-2'}}%</h4>
+                    <h4 class="pl2 " *ngIf="hrmReportService.getsumwithcategoriespast!==0&&hrmReportService.getsumwithcategoriesnow!==0&&hrmReportService.getsumwithcategoriespast>hrmReportService.getsumwithcategoriesnow" style="color: #fa0303;">{{(hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow)/(hrmReportService.getsumwithcategoriespast)*100 | number:'1.1-2'}}%</h4>
+                    <h4 class="pl2" *ngIf="hrmReportService.getsumwithcategoriespast==0&&hrmReportService.getsumwithcategoriesnow!==0" style="color: #06f812;">100%</h4>
+                    <h4 class="pl2 yellow" *ngIf="hrmReportService.getsumwithcategoriespast==hrmReportService.getsumwithcategoriesnow">0%</h4>
                 </div>
                 <div class="now w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{hrmReportService.nam}}</h5>
-                    <h5>{{getsumwithcategoriesnow}}</h5>
+                    <h5>{{hrmReportService.getsumwithcategoriesnow}}</h5>
                 </div>
                 <div class="past w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{hrmReportService.nam-1}}</h5>
-                    <h5>{{getsumwithcategoriespast}}</h5>
+                    <h5>{{hrmReportService.getsumwithcategoriespast}}</h5>
                 </div>
             </div>
            
@@ -69,26 +69,26 @@
             <div class="different">
                 <div class="title">{{title}} tháng {{hrmReportService.thang}} năm {{hrmReportService.nam}} và năm {{hrmReportService.nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
-                    <h3 class="triangle-up pt1" *ngIf="getsumwithmonthnow-getsumwithmonthpast>0"></h3>
-                    <h3 class="triangle-down pt1" *ngIf="getsumwithmonthpast-getsumwithmonthnow>0"></h3>
-                    <h3 class="pl2" *ngIf="(getsumwithmonthnow-getsumwithmonthpast)>0" style="color: #06f812;">{{getsumwithmonthnow-getsumwithmonthpast}}</h3>
-                    <h3 class="pl2" *ngIf="(getsumwithmonthpast-getsumwithmonthnow)>0" style="color:#fa0303;">{{getsumwithmonthpast-getsumwithmonthnow}}</h3>
+                    <h3 class="triangle-up pt1" *ngIf="hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast>0"></h3>
+                    <h3 class="triangle-down pt1" *ngIf="hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow>0"></h3>
+                    <h3 class="pl2" *ngIf="(hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast)>0" style="color: #06f812;">{{hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast | currency:'VND'}}</h3>
+                    <h3 class="pl2" *ngIf="(hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow)>0" style="color:#fa0303;">{{hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow | currency:'VND'}}</h3>
                 </div>
                 <div class="percent flex flex-wrap w-100 justify-center">
-                    <h4 class="triangle-up pt1" *ngIf="getsumwithmonthnow-getsumwithmonthpast>0"></h4>
-                    <h4 class="triangle-down pt1" *ngIf="getsumwithmonthpast-getsumwithmonthnow>0"></h4>
-                    <h4 class="pl2 " *ngIf="getsumwithmonthpast!==0&&getsumwithmonthnow!==0&&getsumwithmonthnow>getsumwithmonthpast" style="color: #06f812;">{{(getsumwithmonthnow-getsumwithmonthpast)/(getsumwithmonthpast)*100}}%</h4>
-                    <h4 class="pl2 " *ngIf="getsumwithmonthpast!==0&&getsumwithmonthnow!==0&&getsumwithmonthpast>getsumwithmonthnow" style="color: #fa0303;">{{(getsumwithmonthpast-getsumwithmonthnow)/(getsumwithmonthpast)*100}}%</h4>
-                    <h4 class="pl2" *ngIf="getsumwithmonthpast==0&&getsumwithmonthnow!==0" style="color: #06f812;">100%</h4>
-                    <h4 class="pl2 yellow" *ngIf="getsumwithmonthpast==getsumwithmonthnow">0%</h4>
+                    <h4 class="triangle-up pt1" *ngIf="hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast>0"></h4>
+                    <h4 class="triangle-down pt1" *ngIf="hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow>0"></h4>
+                    <h4 class="pl2 " *ngIf="hrmReportService.getsumwithmonthpast!==0&&hrmReportService.getsumwithmonthnow!==0&&hrmReportService.getsumwithmonthnow>hrmReportService.getsumwithmonthpast" style="color: #06f812;">{{(hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast)/(hrmReportService.getsumwithmonthpast)*100 | number:'1.1-2'}}%</h4>
+                    <h4 class="pl2 " *ngIf="hrmReportService.getsumwithmonthpast!==0&&hrmReportService.getsumwithmonthnow!==0&&hrmReportService.getsumwithmonthpast>hrmReportService.getsumwithmonthnow" style="color: #fa0303;">{{(hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow)/(hrmReportService.getsumwithmonthpast)*100 | number:'1.1-2'}}%</h4>
+                    <h4 class="pl2" *ngIf="hrmReportService.getsumwithmonthpast==0&&hrmReportService.getsumwithmonthnow!==0" style="color: #06f812;">100%</h4>
+                    <h4 class="pl2 yellow" *ngIf="hrmReportService.getsumwithmonthpast==hrmReportService.getsumwithmonthnow">0%</h4>
                 </div>
                 <div class="now w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{hrmReportService.nam}}</h5>
-                    <h5>{{getsumwithmonthnow}}</h5>
+                    <h5>{{hrmReportService.getsumwithmonthnow}}</h5>
                 </div>
                 <div class="past w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{hrmReportService.nam-1}}</h5>
-                    <h5>{{getsumwithmonthpast}}</h5>
+                    <h5>{{hrmReportService.getsumwithmonthpast}}</h5>
                 </div>
             </div>
            
@@ -98,26 +98,26 @@
             <div class="different">
                 <div class="title">Số lượng nhân sự tháng {{hrmReportService.thang}} năm {{hrmReportService.nam}} và {{hrmReportService.nam-1}}</div>
                 <div class="level flex flex-wrap w-100 justify-center">
-                    <h3 class="triangle-up pt1" *ngIf="getcountedhrminmonthnow-getcountedhrminmonthpast>0"></h3>
-                    <h3 class="triangle-down pt1" *ngIf="getcountedhrminmonthpast-getcountedhrminmonthnow>0"></h3>
-                    <h3 class="pl2" *ngIf="(getcountedhrminmonthnow-getcountedhrminmonthpast)>0" style="color: #06f812;">{{getcountedhrminmonthnow-getcountedhrminmonthpast}} người</h3>
-                    <h3 class="pl2" *ngIf="(getcountedhrminmonthpast-getcountedhrminmonthnow)>0" style="color:#fa0303;">{{getcountedhrminmonthpast-getcountedhrminmonthnow}} người</h3>
+                    <h3 class="triangle-up pt1" *ngIf="hrmReportService.getcountedhrminmonthnow-hrmReportService.getcountedhrminmonthpast>0"></h3>
+                    <h3 class="triangle-down pt1" *ngIf="hrmReportService.getcountedhrminmonthpast-hrmReportService.getcountedhrminmonthnow>0"></h3>
+                    <h3 class="pl2" *ngIf="(hrmReportService.getcountedhrminmonthnow-hrmReportService.getcountedhrminmonthpast)>0" style="color: #06f812;">{{hrmReportService.getcountedhrminmonthnow-hrmReportService.getcountedhrminmonthpast}} người</h3>
+                    <h3 class="pl2" *ngIf="(hrmReportService.getcountedhrminmonthpast-hrmReportService.getcountedhrminmonthnow)>0" style="color:#fa0303;">{{hrmReportService.getcountedhrminmonthpast-hrmReportService.getcountedhrminmonthnow}} người</h3>
                 </div>
                 <div class="percent flex flex-wrap w-100 justify-center">
-                    <h4 class="triangle-up pt1" *ngIf="getcountedhrminmonthnow-getcountedhrminmonthpast>0"></h4>
-                    <h4 class="triangle-down pt1" *ngIf="getcountedhrminmonthpast-getcountedhrminmonthnow>0"></h4>
-                    <h4 class="pl2 " *ngIf="getcountedhrminmonthpast!==0&&getcountedhrminmonthnow!==0&&getcountedhrminmonthnow>getcountedhrminmonthpast" style="color: #06f812;">{{(getcountedhrminmonthnow-getcountedhrminmonthpast)/(getcountedhrminmonthpast)}}</h4>
-                    <h4 class="pl2 " *ngIf="getcountedhrminmonthpast!==0&&getcountedhrminmonthnow!==0&&getcountedhrminmonthpast>getcountedhrminmonthnow" style="color: #fa0303;">{{(getcountedhrminmonthnow-getcountedhrminmonthpast)/(getcountedhrminmonthpast)}}</h4>
-                    <h4 class="pl2" *ngIf="getcountedhrminmonthpast==0&&getcountedhrminmonthnow!==0" style="color: #06f812;">100%</h4>
-                    <h4 class="pl2 yellow" *ngIf="getcountedhrminmonthpast>=getcountedhrminmonthnow">0%</h4>
+                    <h4 class="triangle-up pt1" *ngIf="hrmReportService.getcountedhrminmonthnow-hrmReportService.getcountedhrminmonthpast>0"></h4>
+                    <h4 class="triangle-down pt1" *ngIf="hrmReportService.getcountedhrminmonthpast-hrmReportService.getcountedhrminmonthnow>0"></h4>
+                    <h4 class="pl2 " *ngIf="hrmReportService.getcountedhrminmonthpast!==0&&hrmReportService.getcountedhrminmonthnow!==0&&hrmReportService.getcountedhrminmonthnow>hrmReportService.getcountedhrminmonthpast" style="color: #06f812;">{{hrmReportService.handlePercent(hrmReportService.getcountedhrminmonthpast,hrmReportService.getcountedhrminmonthnow-hrmReportService.getcountedhrminmonthpast)}}%</h4>
+                    <h4 class="pl2 " *ngIf="hrmReportService.getcountedhrminmonthpast!==0&&hrmReportService.getcountedhrminmonthnow!==0&&hrmReportService.getcountedhrminmonthpast>hrmReportService.getcountedhrminmonthnow" style="color: #fa0303;">{{hrmReportService.handlePercent(hrmReportService.getcountedhrminmonthpast,hrmReportService.getcountedhrminmonthpast-hrmReportService.getcountedhrminmonthnow)}}%</h4>
+                    <h4 class="pl2" *ngIf="hrmReportService.getcountedhrminmonthpast==0&&hrmReportService.getcountedhrminmonthnow!==0" style="color: #06f812;">100%</h4>
+                    <h4 class="pl2 yellow" *ngIf="hrmReportService.getcountedhrminmonthpast==hrmReportService.getcountedhrminmonthnow">0%</h4>
                 </div>
                 <div class="now w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{hrmReportService.nam}}</h5>
-                    <h5>{{getcountedhrminmonthnow}} người</h5>
+                    <h5>{{hrmReportService.getcountedhrminmonthnow}} người</h5>
                 </div>
                 <div class="past w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{hrmReportService.nam-1}}</h5>
-                    <h5>{{getcountedhrminmonthpast}} người</h5>
+                    <h5>{{hrmReportService.getcountedhrminmonthpast}} người</h5>
                 </div>
             </div> 
         </div>
@@ -126,8 +126,8 @@
             <div class="different">
                 <div class="title">Số lượng nhân sự tăng, giảm tháng {{hrmReportService.thang}} năm {{hrmReportService.nam}}</div>
                 <div class="percent flex flex-wrap w-100 justify-center">
-                    <h4 class="pl2" style="color: #06f812;">Tăng {{getcountedallnewhr}}</h4>
-                    <h4 class="pl2" style="color: #fa0303;">Giảm {{getcountedallquitedhr}}</h4>
+                    <h4 class="pl2" style="color: #06f812;">Tăng {{hrmReportService.getcountedallnewhr}} người</h4>
+                    <h4 class="pl2" style="color: #fa0303;">Giảm {{hrmReportService.getcountedallquitedhr}} người</h4>
                 </div>
             </div> 
         </div>
@@ -137,7 +137,7 @@
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">Cơ cấu {{title}} theo phòng ban</div>
-        <app-horizontal-bar-chart [receivedData]="getsumwithcategoriesinpb"></app-horizontal-bar-chart>
+        <app-horizontal-bar-chart [receivedData]="hrmReportService.getsumwithcategoriesinpb"></app-horizontal-bar-chart>
     </div>
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
