--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.html
@@ -142,7 +142,7 @@
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">Cơ cấu {{title}} theo phòng ban</div>
-        <app-pie-chart [receivedData]="getpercentofeachpb" ></app-pie-chart>
+        <app-pie-chart [receivedData]="hrmReportService.getpercentofeachpb" ></app-pie-chart>
     </div>
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
