--- a/src/app/components/main-layout/main-layout.component.html
+++ b/src/app/components/main-layout/main-layout.component.html
@@ -1,4 +1,4 @@
-<header><img src="./../../../assets/Capture3.PNG" alt=""></header>
+<header></header>
 <section>
         <div class="nav row flex flex-column">
             <div class="row justify-between">
@@ -7,8 +7,12 @@
             </div>
             <div class="row">
                 <nav class="flex ml4 mb2">
-                            <button routerLink="" routerLinkActive="active">Nhân sự</button>
-                            <button routerLink="" routerLinkActive="">Doanh thu</button>
+                            <button  routerLink="" routerLinkActive="active">
+                                <div class="triangle-down"></div>
+                                <span>Nhân sự</span>
+                            </button>
+                            <button routerLink="" routerLinkActive="">
+                                <div class="triangle-down"></div>Doanh thu</button>
                 </nav>
             </div>
             
