--- a/src/app/components/main-layout/main-layout.component.css
+++ b/src/app/components/main-layout/main-layout.component.css
@@ -1,7 +1,7 @@
 header{
     width: 100%;
     height:3rem;
-    background: #2d4b65;
+    background-image: linear-gradient(-90deg,#44b7e7,#f58730)
 }
 .block{
     margin-left: 1rem;
@@ -25,43 +25,36 @@ a:hover{
 }
 
 .nav button{
-    display:block;
+    display:flex;
     background-color: #f5f5f5;
     font-size: 0.8rem!important;
     height: 1.6rem!important;
-    border-top:none;
-    border-right:none;
     width: fit-content;
-    border-bottom: 1px solid #cbcbcb;
-    border-left: 1px solid #cbcbcb;
+    border: 1px solid #cbcbcb;
 
+}
+.triangle-down {
+    display: none;
+	width: 0;
+	height: 0;
+	border-left: 4px solid transparent;
+	border-right: 4px solid transparent;
+    border-top: 8px solid white;
+    margin-top: 0.3rem;
+    margin-right: 0.4rem;
 }
 .active{
-    background-color:white!important;
+    background-color:#f58730!important;
     border-bottom:none!important;
     border-top: #f6f6f6!important;
+    color:rgb(255, 255, 255)!important;
+    font-weight: 600!important;
 }
-
-/* section .filter{
-    width: 100%;
-    border-bottom:2px solid #666666;
-    height: fit-content;
+.active .triangle-down{
+    display: inline!important;
 }
-section .filter .block{
-    width:10rem;
-    font-size: 0.8rem;
-    margin-top:1rem;
-    flex-direction: column;
-}
-.block label{
-    margin-bottom: 0.3rem!important;
-}
-.block select{
-    width: 100%;
-    height: 1.5rem;
-} */
 footer{
     width: 100%;
     height: 18rem;
-    background-color: #2d4b65;
+    background-image: linear-gradient(-90deg,#44b7e7,#f58730)
 }
