--- a/src/app/shared/combo-line-bar-chart/combo-line-bar-chart/combo-line-bar-chart.component.html
+++ b/src/app/shared/combo-line-bar-chart/combo-line-bar-chart/combo-line-bar-chart.component.html
@@ -5,7 +5,7 @@
   [colorSchemeLine]="lineChartScheme"
   [results]="receivedData"
   [animations]="animations"
-  [lineChart]="lineChartSeries"
+  [lineChart]="receivedData2"
   [gradient]="gradient"
   [xAxis]="showXAxis"
   [yAxis]="showYAxis"
