--- a/src/app/components/main-layout/main-layout.component.html
+++ b/src/app/components/main-layout/main-layout.component.html
@@ -1,12 +1,12 @@
 <header></header>
 <section>
-        <div class="nav row flex flex-column">
-            <div class="row justify-between">
-                <img src="./../../../assets/Capture.PNG" alt="" class="fl ml2">
-                <img src="./../../../assets/Capture2.PNG" alt="" class="fr">
+        <div class="nav flex flex-column">
+            <div class="flex justify-between">
+                <img src="" alt="" class="fl ml2">
+                <img src="" alt="" class="fr">
             </div>
-            <div class="row">
-                <nav class="flex ml4 mb2">
+            <div class="flex flex-wrap">
+                <nav class="flex ml1 mb2 mt2">
                             <button  routerLink="" routerLinkActive="active">
                                 <div class="triangle-down"></div>
                                 <span>Nhân sự</span>
@@ -19,7 +19,9 @@
         </div>
       
 </section>
-<router-outlet></router-outlet>
+<section class="main">
+    <router-outlet></router-outlet>
+</section>
 <div class="w-100 mt2">
     <img src="./../../../assets//Capture5.PNG" alt="">
    
