--- a/src/app/components/main-layout/main-layout.component.css
+++ b/src/app/components/main-layout/main-layout.component.css
@@ -13,7 +13,10 @@ section .nav{
     width: 100%;
     border-bottom:2px solid #666666;
 }
-
+.main{
+    background-image: linear-gradient(#44b7e7,#f58730);
+    width: 100%;
+}
 a:hover{
     text-decoration: none;
     color: inherit;
