--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.html
@@ -1,10 +1,16 @@
     <!-- filter -->
-    <section>
-        <div class="filter h3 row">
-            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <img src="./../../../assets//Capture4.PNG" alt="">
-                <h2 class="pl2">Báo cáo nhân sự công ty Gia Bảo</h2>
+    <section class="">
+        <div class="filter flex flex-wrap">
+            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 mb4">
+                <div class="media">
+                    <img class="mr-2 mt3 ml2" src="https://placehold.it/80x80" alt="Loading...">
+                    <div class="media-body">
+                      <h2 class="mt-3">BÁO CÁO NHÂN SỰ</h2>
+                      <span> Công ty TNHH Thương mại & Nhập khẩu Gia Bảo</span>
+                    </div>
+                  </div>
             </div>
+            
             <form [formGroup]="filterForm" (ngSubmit)="onSubmit(filterForm.value)" class="col-xs-8 col-sm-8 col-md-8 col-lg-8 flex-wrap flex ">
                 <div class="block">
                     <label for={{hrmReportService.years.labels}}>{{hrmReportService.years.labels}}</label>
@@ -32,34 +38,48 @@
             </form>
         </div>
     </section>
-    <h3>Bảng báo cáo nhân sự</h3>
     <!-- main -->
-    <div class="flex flex-wrap w-100 main">
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block ">
+    <div class="w-100 main mt3 flex-wrap flex">
+        
+        
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 block">
             <!-- <app-stacked-area-chart class="stacked-chart" ></app-stacked-area-chart> -->
             <div class="different">
                 <div class="title">{{title}} năm {{hrmReportService.nam}} và {{hrmReportService.nam-1}}</div>
-                <div class="level flex flex-wrap w-100 justify-center">
+                <!-- <div class="level flex flex-wrap w-100 justify-center">
                     <h3 class="triangle-up pt1" *ngIf="hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast>0"></h3>
                     <h3 class="triangle-down pt1" *ngIf="hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow>0"></h3>
-                    <h3 class="pl2" *ngIf="(hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast)>0" style="color: #06f812;">{{hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast | currency:'VND'}}</h3>
-                    <h3 class="pl2" *ngIf="(hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow)>0" style="color:#fa0303;">{{hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow | currency:'VND'}}</h3>
-                </div>
-                <div class="percent flex flex-wrap w-100 justify-center">
+                    <h3 class="pl2" *ngIf="(hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast)>0" style="color: #f58730;">{{hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast | currency:'VND'}}</h3>
+                    <h3 class="pl2" *ngIf="(hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow)>0" style="color:#f58730;">{{hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow | currency:'VND'}}</h3>
+                </div> -->
+                <!-- <div class="percent flex flex-wrap w-100 justify-center">
                     <h4 class="triangle-up pt1" *ngIf="hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast>0"></h4>
                     <h4 class="triangle-down pt1" *ngIf="hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow>0"></h4>
-                    <h4 class="pl2 " *ngIf="hrmReportService.getsumwithcategoriespast!==0&&hrmReportService.getsumwithcategoriesnow!==0&&hrmReportService.getsumwithcategoriesnow>hrmReportService.getsumwithcategoriespast" style="color: #06f812;">{{(hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast)/(hrmReportService.getsumwithcategoriespast)*100 | number:'1.1-2'}}%</h4>
-                    <h4 class="pl2 " *ngIf="hrmReportService.getsumwithcategoriespast!==0&&hrmReportService.getsumwithcategoriesnow!==0&&hrmReportService.getsumwithcategoriespast>hrmReportService.getsumwithcategoriesnow" style="color: #fa0303;">{{(hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow)/(hrmReportService.getsumwithcategoriespast)*100 | number:'1.1-2'}}%</h4>
-                    <h4 class="pl2" *ngIf="hrmReportService.getsumwithcategoriespast==0&&hrmReportService.getsumwithcategoriesnow!==0" style="color: #06f812;">100%</h4>
+                    <h4 class="pl2 " *ngIf="hrmReportService.getsumwithcategoriespast!==0&&hrmReportService.getsumwithcategoriesnow!==0&&hrmReportService.getsumwithcategoriesnow>hrmReportService.getsumwithcategoriespast" style="color: #f58730;">{{(hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast)/(hrmReportService.getsumwithcategoriespast)*100 | number:'1.1-2'}}%</h4>
+                    <h4 class="pl2 " *ngIf="hrmReportService.getsumwithcategoriespast!==0&&hrmReportService.getsumwithcategoriesnow!==0&&hrmReportService.getsumwithcategoriespast>hrmReportService.getsumwithcategoriesnow" style="color: #f58730;">{{(hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow)/(hrmReportService.getsumwithcategoriespast)*100 | number:'1.1-2'}}%</h4>
+                    <h4 class="pl2" *ngIf="hrmReportService.getsumwithcategoriespast==0&&hrmReportService.getsumwithcategoriesnow!==0" style="color: #f58730;">100%</h4>
                     <h4 class="pl2 yellow" *ngIf="hrmReportService.getsumwithcategoriespast==hrmReportService.getsumwithcategoriesnow">0%</h4>
-                </div>
-                <div class="now w-100 flex flex-wrap w-100 justify-around  ">
+                </div> -->
+                <div class="line w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{hrmReportService.nam}}</h5>
-                    <h5>{{hrmReportService.getsumwithcategoriesnow}}</h5>
+                    <h5 style="color:#f58730">{{hrmReportService.getsumwithcategoriesnow}}</h5>
                 </div>
-                <div class="past w-100 flex flex-wrap w-100 justify-around  ">
+                <div class="line w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{hrmReportService.nam-1}}</h5>
-                    <h5>{{hrmReportService.getsumwithcategoriespast}}</h5>
+                    <h5 style="color:#f58730">{{hrmReportService.getsumwithcategoriespast}}</h5>
+                </div>
+                <div class="line w-100 flex flex-wrap w-100 justify-around  ">
+                    <h5>Chênh lệch</h5>
+                    <h5 style="color:#f58730"  *ngIf="(hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast)>0">{{hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast | currency:'VND'}}</h5>
+                    <h5 style="color:#f58730"  *ngIf="(hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow)>0">{{hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow | currency:'VND'}}</h5>
+                </div>
+                <div class="line w-100 flex flex-wrap w-100 justify-around  ">
+                    <h5>Tăng trưởng</h5>
+                    <h5 style="color:#f58730"  *ngIf="hrmReportService.getsumwithcategoriespast!==0&&hrmReportService.getsumwithcategoriesnow!==0&&hrmReportService.getsumwithcategoriesnow>hrmReportService.getsumwithcategoriespast">
+                        {{(hrmReportService.getsumwithcategoriesnow-hrmReportService.getsumwithcategoriespast)/(hrmReportService.getsumwithcategoriespast)*100 | number:'1.1-2'}}%</h5>
+                    <h5 style="color:#f58730"  *ngIf="hrmReportService.getsumwithcategoriespast!==0&&hrmReportService.getsumwithcategoriesnow!==0&&hrmReportService.getsumwithcategoriespast>hrmReportService.getsumwithcategoriesnow">
+                        {{(hrmReportService.getsumwithcategoriespast-hrmReportService.getsumwithcategoriesnow)/(hrmReportService.getsumwithcategoriespast)*100 | number:'1.1-2'}}%</h5>
+                    <h5 style="color:#f58730" ></h5>
                 </div>
             </div>
            
@@ -71,24 +91,24 @@
                 <div class="level flex flex-wrap w-100 justify-center">
                     <h3 class="triangle-up pt1" *ngIf="hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast>0"></h3>
                     <h3 class="triangle-down pt1" *ngIf="hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow>0"></h3>
-                    <h3 class="pl2" *ngIf="(hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast)>0" style="color: #06f812;">{{hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast | currency:'VND'}}</h3>
-                    <h3 class="pl2" *ngIf="(hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow)>0" style="color:#fa0303;">{{hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow | currency:'VND'}}</h3>
+                    <h3 class="pl2" *ngIf="(hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast)>0" style="color:#f58730">{{hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast | currency:'VND'}}</h3>
+                    <h3 class="pl2" *ngIf="(hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow)>0" style="color:#f58730">{{hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow | currency:'VND'}}</h3>
                 </div>
                 <div class="percent flex flex-wrap w-100 justify-center">
                     <h4 class="triangle-up pt1" *ngIf="hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast>0"></h4>
                     <h4 class="triangle-down pt1" *ngIf="hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow>0"></h4>
-                    <h4 class="pl2 " *ngIf="hrmReportService.getsumwithmonthpast!==0&&hrmReportService.getsumwithmonthnow!==0&&hrmReportService.getsumwithmonthnow>hrmReportService.getsumwithmonthpast" style="color: #06f812;">{{(hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast)/(hrmReportService.getsumwithmonthpast)*100 | number:'1.1-2'}}%</h4>
-                    <h4 class="pl2 " *ngIf="hrmReportService.getsumwithmonthpast!==0&&hrmReportService.getsumwithmonthnow!==0&&hrmReportService.getsumwithmonthpast>hrmReportService.getsumwithmonthnow" style="color: #fa0303;">{{(hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow)/(hrmReportService.getsumwithmonthpast)*100 | number:'1.1-2'}}%</h4>
-                    <h4 class="pl2" *ngIf="hrmReportService.getsumwithmonthpast==0&&hrmReportService.getsumwithmonthnow!==0" style="color: #06f812;">100%</h4>
+                    <h4 class="pl2 " *ngIf="hrmReportService.getsumwithmonthpast!==0&&hrmReportService.getsumwithmonthnow!==0&&hrmReportService.getsumwithmonthnow>hrmReportService.getsumwithmonthpast" style="color:#f58730">{{(hrmReportService.getsumwithmonthnow-hrmReportService.getsumwithmonthpast)/(hrmReportService.getsumwithmonthpast)*100 | number:'1.1-2'}}%</h4>
+                    <h4 class="pl2 " *ngIf="hrmReportService.getsumwithmonthpast!==0&&hrmReportService.getsumwithmonthnow!==0&&hrmReportService.getsumwithmonthpast>hrmReportService.getsumwithmonthnow" style="color:#f58730">{{(hrmReportService.getsumwithmonthpast-hrmReportService.getsumwithmonthnow)/(hrmReportService.getsumwithmonthpast)*100 | number:'1.1-2'}}%</h4>
+                    <h4 class="pl2" *ngIf="hrmReportService.getsumwithmonthpast==0&&hrmReportService.getsumwithmonthnow!==0" style="color:#f58730">100%</h4>
                     <h4 class="pl2 yellow" *ngIf="hrmReportService.getsumwithmonthpast==hrmReportService.getsumwithmonthnow">0%</h4>
                 </div>
                 <div class="now w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{hrmReportService.nam}}</h5>
-                    <h5>{{hrmReportService.getsumwithmonthnow}}</h5>
+                    <h5 style="color:#f58730">{{hrmReportService.getsumwithmonthnow}}</h5>
                 </div>
                 <div class="past w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{hrmReportService.nam-1}}</h5>
-                    <h5>{{hrmReportService.getsumwithmonthpast}}</h5>
+                    <h5 style="color:#f58730">{{hrmReportService.getsumwithmonthpast}}</h5>
                 </div>
             </div>
            
@@ -113,11 +133,11 @@
                 </div>
                 <div class="now w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{hrmReportService.nam}}</h5>
-                    <h5>{{hrmReportService.getcountedhrminmonthnow}} người</h5>
+                    <h5 style="color:#f58730">{{hrmReportService.getcountedhrminmonthnow}} người</h5>
                 </div>
                 <div class="past w-100 flex flex-wrap w-100 justify-around  ">
                     <h5>Năm {{hrmReportService.nam-1}}</h5>
-                    <h5>{{hrmReportService.getcountedhrminmonthpast}} người</h5>
+                    <h5 style="color:#f58730">{{hrmReportService.getcountedhrminmonthpast}} người</h5>
                 </div>
             </div> 
         </div>
@@ -126,14 +146,14 @@
             <div class="different">
                 <div class="title">Số lượng nhân sự tăng, giảm tháng {{hrmReportService.thang}} năm {{hrmReportService.nam}}</div>
                 <div class="percent flex flex-wrap w-100 justify-center">
-                    <h4 class="pl2" style="color: #06f812;">Tăng {{hrmReportService.getcountedallnewhr}} người</h4>
-                    <h4 class="pl2" style="color: #fa0303;">Giảm {{hrmReportService.getcountedallquitedhr}} người</h4>
+                    <h4 class="pl2" style="color: #f58730;">Tăng {{hrmReportService.getcountedallnewhr}} người</h4>
+                    <h4 class="pl2" style="color: #f58730;">Giảm {{hrmReportService.getcountedallquitedhr}} người</h4>
                 </div>
             </div> 
         </div>
 
 </div>
-<div class="w-100 flex flex-wrap mt2">
+<div class="w-100 flex flex-wrap mt3">
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">Cơ cấu {{title}} theo phòng ban</div>
@@ -150,7 +170,7 @@
         <app-horizontal-bar-chart [receivedData]="hrmReportService.getaverage"></app-horizontal-bar-chart>
     </div>
 </div>
-<div class="w-100 flex flex-wrap mt2">
+<div class="w-100 flex flex-wrap mt3">
     
     <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 block2">
         <div class="title">{{title}}</div>
@@ -188,7 +208,7 @@
         <app-horizontal-bar-chart [receivedData]="getpercentofeachmonth"></app-horizontal-bar-chart>
     </div>
 </div>
-<div class="w-100 flex flex-wrap mt2">
+<div class="w-100 flex flex-wrap mt3">
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">{{title}} trung bình</div>
@@ -205,7 +225,7 @@
         <app-line-chart [receivedData]="getdifferentpercenteachmonth"></app-line-chart>
     </div>
 </div>
-<div class="w-100 flex flex-wrap mt2">
+<div class="w-100 flex flex-wrap mt3">
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">Số lượng nhân sự</div>
